Fix edit event delete button and spacing for sign up button

--- a/ghi/src/EditEventForm.css
+++ b/ghi/src/EditEventForm.css
@@ -1,1 +1,1 @@
-.Delete {transform:translateX(430px)}
+.Delete {float:right}
